Fixed css bug where date/time of status updates was being cut off

--- a/src/stylesheets/partials/type.less
+++ b/src/stylesheets/partials/type.less
@@ -70,3 +70,7 @@ dl {
 	color:inherit;
 	opacity:0.75;
 }
+
+dt.text-muted {
+	width: 235px;
+}
